# BYUI-Python-Tutor

./: README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt  under_construction.py
.streamlit/: config.toml
Learn/: Model_Cards.py  demystifying_ai.py  llama_model_card.py  overview.py
News/: ai_news.py
Playground/: AtreyuChat.py  AtreyuSearch.py  ai_websearch.py  closed_source.py  open_source.py  tutorChat.py
tools/: chat.py
