[tool.poetry]
name = "Atreyu.AI"
version = "0.1.0"
description = "A Streamlit web application built for introducing AI technology to learners."
authors = ["Ron Vallejo <ronvallejo@gmail.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.12"
logging = "^0.4.9.6"
menu = "^3.2.2"
openai = "^1.40.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
streamlit = "^1.37.1"
tavily-python = "^0.3.9"
torch = "^2.4.0"
transformers = "^4.44.0"
importlib = "^1.0.4"
watchdog = "^4.0.2"
streamlit-elements = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"